--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body style="background-color: black; color: white">
 		<h1>Hello! </h1>
+		<h1> Now you can view your page source to check if everything is ok <h1>
 		<p> testing </p>
 </body>
 </html>
