--- a/index.html
+++ b/index.html
@@ -8,22 +8,13 @@
 		<h1>Hello! </h1>
 		<h1> Now you can view your page source to check if everything is ok <h1>
 		<p> testing </p>
-			# Link Example 
+		## Link Example 
 
-			[CodeTime](https://www.codetime.io)
+[CodeTime](https://www.codetime.io)
 
-			1. Item one 
-			2. Item Two 
-			3. Item Three
-
-
-			Here's a sentence with a footnote. [^1]
-
-			[^1]: This is the footnote. 
-
-			- [x] Write the press release
-			- [ ] Update the website
-			- [ ] Contact the media 
+1. Item one 
+2. Item Two 
+3. Item Three
 
 </body>
 </html>
