--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	     <meta charset="UTF-8">
 	     <title>Example: Blog</title>
 	</head>
-	<body style="background-color: black; color: white">
+	<body style="background-color: white; color: green">
 		<h1>Hello! </h1>
 		<h1> Now you can view your page source to check if everything is ok <h1>
 		<p> testing </p>
@@ -15,6 +15,14 @@
 1. Item one 
 2. Item Two 
 3. Item Three
+			
+			Here's a sentence with a footnote. [^1]
+
+[^1]: This is the footnote. 
+
+- [x] Write the press release
+- [ ] Update the website
+- [ ] Contact the media 
 
 </body>
 </html>
